--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,6 +33,13 @@ jobs:
           rm -rf __pycache__
           echo "message=$(date)" >> $GITHUB_OUTPUT
 
+      - name: Update Title&ReadMe
+        run: |
+
+          python clean-readme.py
+          rm -rf __pycache__
+          echo "message=$(date)" >> $GITHUB_OUTPUT
+          
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
