--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,17 +8,10 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  Update_Filters:
+  update:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@main
-
-      - name: Setup Python 3.9.x
-        uses: actions/setup-python@main
-        with:
-          python-version: '3.9.x'
+      - uses: actions/checkout@v4
 
       - name: Install Dependencies
         run: |
@@ -33,6 +26,12 @@ jobs:
           rm -rf __pycache__
           echo "message=$(date)" >> $GITHUB_OUTPUT
 
+      - name: clean data
+        run: |
+          python clean-readme.py
+          rm -rf __pycache__
+          echo "message=$(date)" >> $GITHUB_OUTPUT
+          
       - name: Commit Changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
