--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -8,16 +8,24 @@ env:
   TZ: Asia/Shanghai
 
 jobs:
-  update:
+  Update_Filters:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout Repo
+        uses: actions/checkout@main
+
+      - name: Setup Python 3.9.x
+        uses: actions/setup-python@main
+        with:
+          python-version: '3.9.x'
 
       - name: Install Dependencies
         run: |
           sudo timedatectl set-timezone "$TZ"
           python -m pip install --upgrade pip
           pip install -U tld IPy dnspython httpx loguru
+          
       - name: Update Filters
         id: update
         run: |
@@ -27,11 +35,6 @@ jobs:
       - name: Update clash
         run: |
           python clash.py
-          rm -rf __pycache__
-          echo "message=$(date)" >> $GITHUB_OUTPUT
-      - name: clean data
-        run: |
-          python clean-readme.py
           rm -rf __pycache__
           echo "message=$(date)" >> $GITHUB_OUTPUT
           
